2006-08-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/WindowManager.cc (WindowManager::updateMenus): 
	Fix issue in reload causing dangling pointer to custom menus hang
	around in the list of menus. Should improve on reload crash situation
	#92 and #96.

2006-08-23  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (PDecor::TitleItem::updateVisible):
	Added info flag to title to store extra information in title such
	as marked state. Closing #47
	( Thanks shared for request )

2006-08-10  Claes Nästén  <me{@}pekdon{.}net>

	* src/PMenu.cc (PMenu::unmapSubmenus): 
	Moved dynamic flag to menu items in PMenu. Update unmap code to skip
	traversing down dynamic menus.

2006-08-01  Claes Nästén  <me{@}pekdon{.}net>

	* src/Atoms.cc (getLong): 
	Fix compile warnings.

	* src/PDecor.cc (PDecor::doMove): 
	Moved skip attribute to PDecor from Frame, adding check to skip those
	PDecor's when checking snap. Closing #95
	( Thanks shared for reporting )

2006-05-29  Claes Nästén  <me{@}pekdon{.}net>

	* src/Harbour.cc (setStateHidden): 
	Created new state action HarbourHidden. Closing #89

	* src/Theme.cc (load): 
	Removed ROOT command support. Closing #93
	( Thanks shared for reporting )
	
2006-05-01  Claes Nästén  <me{@}pekdon{.}net>

	* src/ActionHandler.cc (actionFocusToggle): 
	Added boolean option to {Next,Prev}Frame set of actions to allow
	inclusion of iconified windows. Closing #59
	( Thanks shared for request )
	
	* src/ActionHandler.cc (actionSendToViewport): 
	Added SendToViewport Col Row action. It does not implement relative
	viewport sending. Closing #70
	(Thanks Largon for request)

	* src/WindowManager.cc (createMenus): 
	Extended the ShowMenu functionality to include custom menus.
	Example, by adding the following to the menu configuration file:

	ExampleMenu = "Example Menu" {
	  Entry = "Example Entry" { Actions = "Exec xmessage Example" }
	}

	And then issuing the action ShowMenu ExampleMenu it would pop up
	the menu defined. Closing #69
